added_home_front

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
 
 
                      <!-- Links of some front are here  -->
-                    
+                    <link rel="stylesheet" href="./LoginAssets/css/2.d34346ea.chunk.css">
+                    <link rel="stylesheet" href="./HomeAssets/css/CustomNav.css">
+                    <link rel="stylesheet" href="./HomeAssets/css/libs.min.css">
+                    <link rel="stylesheet" href="./HomeAssets/css/style.min.css">
+                    <link rel="stylesheet" href="./LoginAssets/css/login.css">
+                    <!-- <link rel="stylesheet" href="./LoginAssets/css/main.f70df022.chunk.css"> -->
+                    <link rel="stylesheet" href="./LoginAssets/css/register.css">
 
 
     <!-- some external links are here  -->
